# atlas-mcp

./: .env.example  .gitignore  README.md  conftest.py  debug_agent.py  debug_test.py  pyproject.toml  test_complex_web.py  test_decomposition.py  test_e2e.py  test_e2e_no_rag.py  test_fast.py  test_full_detailed.py  test_full_mcp.py  test_multi_agent.py  test_server_basic.py  test_simple.py  test_single_agent.py  test_webapp_problem.py
.speckit/memory/: constitution.json  constitution.md
.speckit/specs/code-review-fixes/: spec.md  tasks.md
.speckit/specs/decomposer-diversity/: spec.md  tasks.md
.speckit/specs/swarm-001/: plan.json  plan.md  spec.json  spec.md  tasks.json  tasks.md
agent_mcp/app/: server_lifecycle.py
agent_mcp/core/: config.py
agent_mcp/db/: schema.py
agent_mcp/tools/: __init__.py  swarm_tools.py
agent_mcp/tui/: actions.py
docs/: prd.md
scripts/: debug_search.py  full_agent_test.py  full_agent_test_v2.py  full_atlas_demo.py  full_integration_test.py  full_rag_demo.py  production_quality_demo.py  quick_10_agents.py  show_all_patches.py  solve_local_issue.py  test_agentic_context7.py  test_chart.py  test_context7_mcp.py  test_enhanced_search.py  test_fast.py  test_full_logging.py  test_mcp_pipeline.py  test_page_fetch.py  test_quality_selection.py  test_rag_fixes.py  test_swebench_sympy.py
src/atlas/: __init__.py  server.py
tests/: test_agents.py  test_dag_assembly.py  test_integration.py  test_orchestrator.py  test_quality.py  test_repo_scout.py  test_task_dag.py  test_task_decomposer.py  test_verification.py  test_voting.py
(+69 files in other folders)
